# admete

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  README.md  admete_latest  toolchain-win-mingw64.cmake
.github/workflows/: build-reusable.yaml  cmake-linux.yaml  cmake-windows.yaml  cmake.yaml  release-workflow.yaml  test.yaml
bindings/: CMakeLists.txt  api.cpp  api.h
include/: CMakeLists.txt
include/fathom/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  uci.cpp  uci.hpp
src/admete/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  evaluate.cpp  evaluate.hpp  movegen.cpp  movegen.hpp  ordering.cpp  perft.cpp  search.cpp  search.hpp  tablebase.cpp  transposition.cpp  transposition.hpp  types.hpp  uci.cpp  zobrist.hpp
src/admete/neural/: features.cpp  features.hpp  fixed.hpp  linalg.hpp  network.hpp  weights.cxx  weights.hpp
src/analyser/: CMakeLists.txt  analyser.cpp
src/game/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  cache.cpp  cache.hpp  constants.cpp  evaluate.cpp  evaluate.hpp  geometry.cpp  movegen.cpp  movegen.hpp  piece.cpp  piece.hpp  printing.cpp  printing.hpp  types.hpp  zobrist.cpp  zobrist.hpp  zorbist.cpp
src/game/neural/: features.cpp  features.hpp  linalg.hpp  network.cpp  network.hpp  weights.cpp  weights.hpp
src/search/: CMakeLists.txt  evaluate.cpp  evaluate.hpp  moveordering.hpp  ordering.cpp  ordering.hpp  perft.cpp  search.cpp  search.hpp  tablebase.cpp  tablebase.hpp  transposition.cpp  transposition.hpp  uci.cpp  uci.hpp
src/search/fathom/: CMakeLists.txt  tbprobe.cpp
src/testing/: CMakeLists.txt  testing.cpp  testing.hpp
test/: CMakeLists.txt  board.cpp  eval.cpp  features.cpp  fen.cpp  fixed.cpp  fixed_accumulator.cpp  linalg.cpp  main.cpp  network.cpp  ops.cpp  ordering.cpp  perft.cpp  quantised_linear_layer.cpp  search.cpp  squares.cpp  zobrist.cpp
training/: .clang-format  CMakeLists.txt  main.cpp
